Attempting to fix broken display

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					}
 					for(v in data["servers"]) {
 						h += "<tr>";
-						var srv = data["servers"][v]
+						var srv = data["servers"][v]["name"]
 						
 						var na  = v;
 						if(na == data["current"]) {
