Fixed javascript for server share display

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						
 						h += "<td><b>" + na + "</b></td>";
 						shares = srv['shares'];
-						if(srv["role"] != "mine"|| srv["role"] != "info") {
+						if(srv["role"] != "mine" && srv["role"] != "info") {
 							shares = "Not Gathered";
 						}
 						
