--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				border-bottom:2px solid white;
 			}
 		</style>
+        <title>bitHopper info</title>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript">
 		
@@ -42,7 +43,7 @@
 			function update() {
 				$.getJSON('/data', function(data) {
 					$("#current").html("<span style='color:yellow;'>" + data["current"] + "</span> @" + parseInt(data["mhash"]) + "MHash");
-					var h = "<table border=0 padding=0 cellpadding=0 cellspacing=0><tr><td class=head><b>Server</b></td><td class=head align=right><b>Shares</b></td><td class=head align=right><b>Role</b></td><td class=head align=right><b>User Shares / Reject</b></td><td class=head align=right><b>Payout</b></td><td class=head align=right><b>Efficiency</b></td></tr>";
+					var h = "<table border=0 padding=0 cellpadding=0 cellspacing=0><tr><td class=head><b>Server</b></td><td class=head align=right><b>Shares</b></td><td class=head align=right><b>Role</b></td><td class=head align=right><b>User Shares / Rejects</b></td><td class=head align=right><b>Payout</b></td><td class=head align=right><b>Efficiency</b></td></tr>";
 					var maxlrej = 0;
 					for(v in data["servers"]) {
 						if(!data["servers"][v]["lag"]) {
