--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						h += "<td><b>" + na + "</b></td>";
 						shares = srv['shares'];
 						if(srv["role"] != "mine" && srv["role"] != "info") {
-							shares = "Not Gathered";
+							shares = "N/A";
 						}
 						
 						h += "<td align=right>" + shares  + "</td>";
