Fixed the issue with incorrect decimal places being output. estimation is still wrong

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
                         var expect = (parseFloat(srv["shares"])*50)/data["difficulty"];
-                        expect  = (parseFloat(payout)/expect) * 100;
+                        expect  = parseFloat((parseFloat(payout)/expect) * 100).toFixed(1);
                         var pay_str = expect +  "%";
 
                         h += "<td align=right>" + pay_str + "</td>"; 
