--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			
 			function getShares(payload, srv) {
 				shares = srv['shares'];
-				if(srv["role"] != "mine" && srv["role"] != "mine_nmc" && srv["role"] != "info" && srv["role] != "mine_slush") {
+				if(srv["role"] != "mine" && srv["role"] != "mine_nmc" && srv["role"] != "info" && srv["role"] != "mine_slush") {
 					return "N/A";
 				}
 				
