All servers now update stats unless role=='disable' api_disable will keep updating, and will change back to mine when new data is found

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			
 			function getShares(payload, srv) {
 				shares = srv['shares'];
-				if(srv["role"].substring(0, 4) != "mine") {
+				if(srv["role"] == "disabled") {
 					return "N/A";
 				}
 				
@@ -159,7 +159,7 @@
 			}
 			
 			function getRoundShares(payload, srv) {
-				if(srv["role"].substring(0, 4) != "mine")
+				if(srv["role"] == "disable")
 					return [];
 
 				return srvhist[srv['name']];
@@ -284,7 +284,7 @@
 						},
 						function(a, b) {
 							if(data["servers"][a]["role"].trim() != data["servers"][b]["role"].trim()) {
-								return data["servers"][a]["role"] > data["servers"][b]["role"];
+								return data["servers"][a]["role"] < data["servers"][b]["role"];
 							}
 							
 							return data["servers"][a]["name"] > data["servers"][b]["name"]
