--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			
 			function getShares(payload, srv) {
 				shares = srv['shares'];
-				if(srv["role"][0:4] != "mine" && srv["role"] != 'info' ) {
+				if(srv["role"].substring(0,4) != "mine" && srv["role"] != 'info' ) {
 					return "N/A";
 				}
 				
