Per pool penalty configuration when calculating shares against difficulty. Startup time using user.cfg and runtime using stats webpage. Default,Slice and AltSlice scheduler pages updated and tested.

--- a/index-slice.html
+++ b/index-slice.html
@@ -142,6 +142,15 @@
 				}
 			}
 
+			function setPenalty(srvName) {
+				var penalty = prompt("Set penalty for: " + srvName, 0);
+				if(penalty != null && penalty != undefined && penalty != "") {
+					var frm = "<form><input type=hidden name='penalty-" + srvName + "' value='" + penalty + "'></form>";
+					$.post("/stats", $(frm).serialize());					
+					update();
+				}
+			}
+
 			function getPayout(payload, srv) {
 				var srvName = "";
 				for(var v in payload["servers"]) {
@@ -179,6 +188,17 @@
 					return parseFloat(payload['sliceinfo'][name]).toFixed(0)
 				else
 					return "n/a"
+			}
+			
+			function getPenalty(payload, srv) {
+				var penalty = 1.00
+				if (srv['penalty'] && srv['penalty'] > 0) {
+					 penalty = parseFloat(srv['penalty']);
+				}
+				var penalty_html = "<a href='#' onFocus='this.blur();' onClick=\"setPenalty('"
+				penalty_html = penalty_html + srvName + "');\" style='text-decoration:underline;color:white;'>"
+				penalty_html = penalty_html + penalty.toFixed(2) + "</a>";			
+				return penalty_html;
 			}
 			
 			var srvhist = {};
@@ -300,6 +320,7 @@
 							'User&nbsp;Shares<br>Rejects': { 'data':getUserShareRejects, 'align':'right' },
 							'Payout': { 'data':getPayout, 'align':'right' },
 							'Efficiency': { 'data':getEfficiency, 'align':'right' },
+							'Penalty': { 'data':getPenalty, 'align':'right' },
 							'Slice': { 'data':getSlice, 'align':'right' },
 							'Round Shares': { 'data':getRoundShares, 'type':'linechart', 'width':'100%' }
 						},
