Add backend user stats to store stuff like rejects and last time seen

--- a/index-slice.html
+++ b/index-slice.html
@@ -125,7 +125,7 @@
 			}
 			
 			function getUserShares(payload, user, key) {
-				return user;
+				return user["shares"];
 			}
 			
 			function getUserName(payload, user, key) {
