--- a/index.html
+++ b/index.html
@@ -124,8 +124,16 @@
 					+ fixLength("" + pp.toFixed(2), 5) + "%";
 			}
 			
+            function getUserTime(payload, user, key){
+                return user['last']
+            }
+
+            function getUserRejects(payload, user, key){
+                return user['rejects']
+            }
+
 			function getUserShares(payload, user, key) {
-				return user;
+				return user["shares"];
 			}
 			
 			function getUserName(payload, user, key) {
@@ -184,8 +192,6 @@
 			
 			function getSlice(payload, srv) {
 				var name = srv['pool_index'];
-                if (payload['sliceinfo'][name] is undefined)
-                    return "n/a"
 				if (payload['sliceinfo'][name] >= 0)
 					return parseFloat(payload['sliceinfo'][name]).toFixed(0)
 				else
@@ -340,7 +346,9 @@
 					buildTable("#users", users, users,
 						{
 							"User": { 'data':getUserName } ,
-							"Shares": { 'data':getUserShares, 'align':'right' }  
+                            "Last Seen": {'data':getUserTime, 'align':'right' },
+							"Shares": { 'data':getUserShares, 'align':'right' },
+                            "Rejects": {'data':getUserRejects, 'align':'right'}  
 						}
 					);
 					
