--- a/index-altslice.html
+++ b/index-altslice.html
@@ -124,8 +124,16 @@
 					+ fixLength("" + pp.toFixed(2), 5) + "%";
 			}
 			
+            function getUserTime(payload, user, key){
+                return user['last']
+            }
+
+            function getUserRejects(payload, user, key){
+                return user['rejects']
+            }
+
 			function getUserShares(payload, user, key) {
-				return user;
+				return user["shares"];
 			}
 			
 			function getUserName(payload, user, key) {
@@ -338,7 +346,9 @@
 					buildTable("#users", users, users,
 						{
 							"User": { 'data':getUserName } ,
-							"Shares": { 'data':getUserShares, 'align':'right' }  
+                            "Last Seen": {'data':getUserTime, 'align':'right' },
+							"Shares": { 'data':getUserShares, 'align':'right' },
+                            "Rejects": {'data':getUserRejects, 'align':'right'}   
 						}
 					);
 					
