--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
 				return key;
 			}
 
+			function getUserHashrate(payload, user, key) {
+				return user["hash_rate"];
+			}
+
 			function setPayout(srvName) {
 				var payout = prompt("set payout for: " + srvName, 0);
 				if(payout != null && payout != undefined && payout != "") {
@@ -346,9 +350,10 @@
 					buildTable("#users", users, users,
 						{
 							"User": { 'data':getUserName } ,
-                            "Last Seen": {'data':getUserTime, 'align':'right' },
+                           				"Last Seen": {'data':getUserTime, 'align':'right' },
 							"Shares": { 'data':getUserShares, 'align':'right' },
-                            "Rejects": {'data':getUserRejects, 'align':'right'}  
+                            				"Rejects": {'data':getUserRejects, 'align':'right'},
+							"Hashrate": { 'data':getUserHashrate, 'align':'right' }  
 						}
 					);
 					
