Index.html fix. @ goes before the bitHopper

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 		
 			function update() {
 				$.getJSON('/data', function(data) {
-					document.title = data["current"] + 'bitHopper @ ';
+					document.title = data["current"] + ' @ bitHopper';
 					$("#current").html("<span style='color:yellow;'>" + data["current"] + "</span> @" + parseInt(data["mhash"]) + "MHash");
 
 					updateRoundShares(data);
