--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 			td.head {
 				border-bottom:2px solid white;
 			}
+			#headercontainer { position: fixed; top: 0; left: 0; right: 0; height: 85px; margin: 0; padding: 0; background-color: #272F87; }
+
 			
 		</style>
 		<title>bitHopper info</title>
@@ -374,14 +376,15 @@
 		</script>
 	</head>
 	<body>
-	
+	<div id="headercontainer">	
 		<h1 id="current"></h1>
 		<span style="padding:5px;">
 			<span style="background-color:black;width:20px;height:20px;">&nbsp;&nbsp;</span> disabled
 			<span style="background-color:yellow;width:20px;height:20px;">&nbsp;&nbsp;</span> info
 			<span style="background-color:green;width:20px;height:20px;">&nbsp;&nbsp;</span> mine
 		</span>
-		<br /><br />
+	</div>
+		<br /><br /><br /><br /><br />
 		<div id="table"></div>
 		<div id="users"></div>
 	</body>
