Added shameless plug for c00w to get some donation BTC.

--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
 			<span style="background-color:black;width:20px;height:20px;">&nbsp;&nbsp;</span> Disabled
 			<span style="background-color:yellow;width:20px;height:20px;">&nbsp;&nbsp;</span> Info
 			<span style="background-color:green;width:20px;height:20px;">&nbsp;&nbsp;</span> Mine
+			<span style="background-color:#FF3232;width:20px;height:20px;color:white;font-family:Arial,Helvetica,sans-serif;font-size:20px;"><b>Please Donate to c00w:1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX</b></span> 
 		</span>
 	</div>
 		<br /><br /><br /><br /><br />
