--- a/index.html
+++ b/index.html
@@ -243,6 +243,39 @@
 				return penalty_html;
 			}
 			
+			function getPoolSpeed(payload, srv) {
+				if (srv['ghash'] > 0) {
+					if (srv["isSpeedEstimated"] == true) {
+						ghashColor = "<span class='round_duration_estimate'>*"	
+					} else {
+						ghashColor = "<span class='round_duration'>"	
+					}					
+					return ghashColor + parseFloat(srv['ghash']).toFixed(1) + "</span>"
+				} else {
+					return '&nbsp;';
+				}
+			}
+
+			function getRoundDuration(payload, srv) {
+				var h = '&nbsp;';
+				if (srv['duration'] > 0) {
+					var totalSec = parseInt(srv["duration"]);
+					var days =    Math.floor(  totalSec / 86400 );
+					var hours =   Math.floor( (totalSec - (days*86400)) / 3600 );
+					var minutes = Math.floor( (totalSec - (days*86400) - (hours * 3600))/60);
+					var estimationColor = "<span class='round_duration'>"
+					if (srv["isDurationEstimated"] == true ) {
+						estimationColor = "<span class='round_duration_estimate'>*"
+					}
+					if (days>0) {
+						h = "<font=-2>" + estimationColor + days + "d:" + hours +"h:" + minutes + "m</span></font>";
+					} else {
+						h = estimationColor + hours +"h:" + minutes + "m</span>";
+					}
+				}
+				return h;
+			}
+			
 			var srvhist = {};
 			function updateRoundShares(data) {
 				for(v in data["servers"]) {
@@ -361,6 +394,8 @@
 							'Shares': { 'data':getShares, 'color':getColor, 'align':'right' },
 							'Role': { 'data':getRole },
 							'User&nbsp;Shares<br>Rejects': { 'data':getUserShareRejects, 'color':getColor, 'align':'center' },
+							'Speed': { 'data':getPoolSpeed },
+							'Duration': { 'data':getRoundDuration},
 							'Payout': { 'data':getPayout, 'color':getColor, 'align':'center' },
 							'Efficiency': { 'data':getEfficiency, 'color':getColor, 'align':'center' },
 							'Penalty': { 'data':getPenalty, 'color':getColor, 'align':'center' },
