CSS for duration/speed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 			}
 			#headercontainer { position: fixed; top: 0; left: 0; right: 0; height: 85px; margin: 0; padding: 0; background-color: #272F87; }
 
+			#round_duration {
+				color: White;
+			}
+			
+			#round_duration_estimate {
+				color: DarkGrey;
+			}		
 			
 		</style>
 		<title>bitHopper info</title>
