--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@
 				$.post("/stats", $(frm).serialize());
 				update();
 			}
+			
+			function enableDebug() {
+				var frm = "<form><input type=hidden name='enableDebug' value=''></form>";
+				$.post("/stats", $(frm).serialize());
+				update();
+			}
+			
+			function disableDebug() {
+				var frm = "<form><input type=hidden name='disableDebug' value=''></form>";
+				$.post("/stats", $(frm).serialize());
+				update();
+			}
 
 
 			function getPayout(payload, srv) {
@@ -457,6 +469,8 @@
 				<td><input class="admin" type="button" name="resetsc" value="Reset Scheduler" onclick="resetScheduler(); return false;"/></td>
 				<td><input class="admin" type="button" name="resetsh" value="Reset Shares" onclick="resetShares(); return false;"/></td>
 				<td><input class="admin" type="button" name="reloadconfig" value="Reload Config" onclick="reloadConfig(); return false;"/></td>
+				<td><input class="admin" type="button" name="reloadconfig" value="Reload Config" onclick="enableDebug(); return false;"/></td>
+				<td><input class="admin" type="button" name="reloadconfig" value="Reload Config" onclick="disableDebug(); return false;"/></td>
 			</tr>
 		</table>
 	</div>
