--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
 				<td><input class="admin" type="button" name="resetsc" value="Reset Scheduler" onclick="resetScheduler(); return false;"/></td>
 				<td><input class="admin" type="button" name="resetsh" value="Reset Shares" onclick="resetShares(); return false;"/></td>
 				<td><input class="admin" type="button" name="reloadconfig" value="Reload Config" onclick="reloadConfig(); return false;"/></td>
-				<td><input class="admin" type="button" name="enableDebug" value="Enable Debug" onclick="enableDebug(); return false;"/></td>				<td><input class="admin" type="button" name="disableDebug" value="Disable Debug" onclick="disableDebug(); return false;"/></td>
+				<td><input class="admin" type="button" name="enableDebug" value="Enable Debug" onclick="enableDebug(); return false;"/></td>				
+				<td><input class="admin" type="button" name="disableDebug" value="Disable Debug" onclick="disableDebug(); return false;"/></td>
 			</tr>
 		</table>
 	</div>
