Add feature: Option to hide info pools in web interface

--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@
 					if( !showDisabledPools && row_role == "disable" ){
 					    continue;		//Skip disabled pools
 					}
+					if( !showDisabledPools && row_role == "info" ){
+					    continue;		//Skip info pools
+					}
 
 					html += "<tr id=\"row_" + i + "\">";
 					
@@ -469,7 +472,10 @@
 			<span style="background-color:yellow;width:20px;height:20px;">&nbsp;&nbsp;</span> Info
 			<span style="background-color:green;width:20px;height:20px;">&nbsp;&nbsp;</span> Mine
 			<span style="background-color:#FF3232;width:20px;height:20px;color:white;font-family:Arial,Helvetica,sans-serif;font-size:20px;"><b>Please Donate to c00w:1HEmzeuVEKxBQkEenysV1yM8oAddQ4o2TX</b></span> 
-			<form><input type="checkbox" id="show_role_disabled" name="show_role" value="disabled" checked="true" />Show Disabled Pools</form>
+			<form>
+				<input type="checkbox" id="show_role_disabled" name="show_role" value="disabled" checked="true" />Show Disabled Pools 
+				<input type="checkbox" id="show_role_info" name="show_role" value="info" checked="true" />Show Info Pools
+			</form>
 		</span>
 	</div>
 	<div id="admin">
