add getColor to Mh/s and Round Time

--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
 							'Shares': { 'data':getShares, 'color':getColor, 'align':'right' },
 							'Role': { 'data':getRole },
 							'User&nbsp;Shares<br>Rejects': { 'data':getUserShareRejects, 'color':getColor, 'align':'center' },
-							'MH/s': { 'data':getPoolSpeed, 'align':'right' },
-							'Round<br>Time': { 'data':getRoundDuration, 'align':'center'},
+							'MH/s': { 'data':getPoolSpeed, 'color':getColor, 'align':'center' },
+							'Round<br>Time': { 'data':getRoundDuration, 'color':getColor, 'align':'center'},
 							'Payout': { 'data':getPayout, 'color':getColor, 'align':'center' },
 							'Efficiency': { 'data':getEfficiency, 'color':getColor, 'align':'center' },
 							'Penalty': { 'data':getPenalty, 'color':getColor, 'align':'center' },
