--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 							'Shares': { 'data':getShares, 'color':getColor, 'align':'right' },
 							'Role': { 'data':getRole },
 							'User&nbsp;Shares<br>Rejects': { 'data':getUserShareRejects, 'color':getColor, 'align':'center' },
-							'MH/s': { 'data':getPoolSpeed, 'align':'right' },
+							'GH/s': { 'data':getPoolSpeed, 'align':'right' },
 							'Round<br>Time': { 'data':getRoundDuration, 'align':'center'},
 							'Payout': { 'data':getPayout, 'color':getColor, 'align':'center' },
 							'Efficiency': { 'data':getEfficiency, 'color':getColor, 'align':'center' },
